# devflow-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/codeintel/: __init__.py  chunk_metadata.py  chunk_pipeline.py  code_chunker.py  document_chunker.py  relationship_metadata.py  snapshot_builder.py  structure_extractor.py  structure_pipeline.py  symbol_inventory.py
app/rag/: __init__.py  embedding.py  indexing.py  ranking.py  search_service.py  symbol_search.py
app/repo/: __init__.py  content_types.py  ingestion_service.py  path_rules.py  scan_records.py  scanner.py
app/schemas/: __init__.py  code_intelligence.py  repository_ingestion.py  retrieval.py
doc/: devflow_agent_iteration_plan.md  devflow_agent_project_plan.md  git_commit_message_conventions.md
examples/: repository_ingestion_example.md
study/: iteration-2-repository-scanning-and-chunking-study.md  iteration-3-code-intelligence-extraction-study.md  iteration-4-retrieval-experience-study.md
tests/codeintel/: test_chunk_pipeline.py  test_snapshot_builder.py  test_structure_extractor.py  test_symbol_inventory.py
tests/repo/: test_ingestion_service.py
