[project]
name = "devflow-agent"
version = "0.1.0"
description = "AI-assisted repository understanding and planning agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
